# os-rpi-downloader-flask

./: .env  .flake8  README.md  __app.py  _app.py  _app_celery.py  pyproject.toml  start_celery.sh  start_keyaid.sh
app/: __init__.py  app.py  celery_app.py  config.py  env_config.py  routes.py  runcelery.py
app/os_database/: db.json
app/tasks/: __init__.py  workers.py
app/utility/: celery_util.py
files_to_update/: init-usb-gadget.sh
models/: job_progress.py
